--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -183,42 +183,6 @@ spec:
   selector:
     {{- include "authgear.portalSelectorLabels" . | nindent 4 }}
 ---
-{{ if not .Values.skipCRDResources }}
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: correcthostforforwardauth
-spec:
-  headers:
-    customRequestHeaders:
-      X-Forwarded-Host: {{ .Values.authgear.portalServer.authgearHost | quote }}
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: forwardauth
-spec:
-  forwardAuth:
-    address: http://{{ include "authgear.nameResolver" . }}.{{ .Release.Namespace }}.svc.cluster.local/resolve
-    trustForwardHeader: true
-    authResponseHeaders:
-    - x-authgear-session-valid
-    - x-authgear-user-id
-    - x-authgear-user-anonymous
-    - x-authgear-user-verified
-    - x-authgear-session-acr
-    - x-authgear-session-amr
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: reverthostforupstream
-spec:
-  headers:
-    customRequestHeaders:
-      X-Forwarded-Host: {{ .Values.authgear.portalServer.ingress.host | quote }}
----
-{{ end }}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
@@ -238,6 +202,26 @@ spec:
   - secretName: {{ .Values.authgear.portalServer.ingress.tls.secretName | quote }}
     hosts:
     - {{ .Values.authgear.portalServer.ingress.host | quote }}
+  rules:
+  - host: {{ .Values.authgear.portalServer.ingress.host | quote }}
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: {{ include "authgear.namePortal" . | quote }}
+          servicePort: http
+---
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: {{ printf "%s-http" (include "authgear.namePortal" .) | quote }}
+  labels:
+    {{- include "authgear.labels" . | nindent 4 }}
+  annotations:
+    kubernetes.io/ingress.class: {{ .Values.subcharts.certmanager.acme.ingress.class | quote }}
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: {{ printf "%s-redirecthttptohttps@kubernetescrd" .Release.Namespace | quote }}
+spec:
   rules:
   - host: {{ .Values.authgear.portalServer.ingress.host | quote }}
     http:
