Add redirect HTTP to HTTPS middleware

--- a/authgear/templates/traefik.yaml
+++ b/authgear/templates/traefik.yaml
@@ -11,6 +11,16 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
+  name: redirecthttptohttps
+  namespace: {{ .Values.authgear.appNamespace | quote }}
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
   name: correcthostforforwardauth
 spec:
   headers:
