--- a/authgear/templates/service.yaml
+++ b/authgear/templates/service.yaml
@@ -11,3 +11,25 @@ spec:
   externalName: {{ include "authgear.nameMain" . }}.{{ .Release.Namespace }}.svc.cluster.local
   ports:
   - port: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: bridge-authgear-admin-server
+  namespace: {{ .Values.authgear.appNamespace | quote }}
+spec:
+  type: ExternalName
+  externalName: {{ include "authgear.nameAdmin" . }}.{{ .Release.Namespace }}.svc.cluster.local
+  ports:
+  - port: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: bridge-authgear-resolver-server
+  namespace: {{ .Values.authgear.appNamespace | quote }}
+spec:
+  type: ExternalName
+  externalName: {{ include "authgear.nameResolver" . }}.{{ .Release.Namespace }}.svc.cluster.local
+  ports:
+  - port: 80
