--- a/authgear/templates/traefik.yaml
+++ b/authgear/templates/traefik.yaml
@@ -56,6 +56,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: stripprefixadmin
+  namespace: {{ .Values.authgear.appNamespace | quote }}
 spec:
   stripPrefix:
     prefixes:
@@ -65,6 +66,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: stripprefixresolver
+  namespace: {{ .Values.authgear.appNamespace | quote }}
 spec:
   stripPrefix:
     prefixes:
