Set traefik svc externalTrafficPolicy to Local for obtaining client ip

--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -48,6 +48,10 @@ traefik:
       cpu: "300m"
       memory: "256Mi"
 
+  service:
+    spec:
+      externalTrafficPolicy: Local
+
 # The values of this chart.
 authgear:
   appNamespace: "authgear-apps"
